<resources>

    <!-- region common -->
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>

    <string name="common_error_invalid_response">Invalid server response</string>
    <string name="common_error_invalid_form">Invalid form</string>
    <string name="common_error_network_connection">No internet connection</string>
    <string name="common_error_unknown_host">Server not responding</string>
    <string name="common_error_can_not_save_data">We could not save your data</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="common_title_popup_form_validation" />
    <string name="common_error_http">An error occurred please try again later \n (%1$s)</string>
    <string name="common_error_timeout">Request timed out</string>
    <string name="common_error_unauthorized">Only logged in users can perform this operation</string>

    <string name="common_text_cast">Cast</string>
    <!-- endregion -->

    <!-- region Movie -->
    <string name="movie_message_popular_movies">Popular Movies</string>
    <string name="movie_message_movies">Movies</string>
    <string name="movie_message_popular">Popular</string>
    <!-- endregion -->

    <!-- region TV Show -->
    <string name="tv_show_message_top_rated">Top Rated</string>
    <string name="tv_show_message_tv_series">TV Series</string>
    <string name="tv_show_message_top_rated_series">Top Rated Series</string>
    <!-- endregion -->

    <!-- region Show Detail -->
    <string name="show_detail_message_not_specified">Not Specified</string>
    <string name="show_detail_message_min_formatted">%d min</string>
    <!-- endregion -->

    <!-- region Tv Show Detail -->
    <string name="tv_show_detail_message_creators">Creators:</string>
    <plurals name="tv_show_detail_message_seasons">
        <item quantity="one">%d season</item>
        <item quantity="other">%d seasons</item>
    </plurals>
    <!-- endregion -->

    <!-- region Movie Detail -->
    <string name="movie_detail_message_director">Director:</string>
    <string name="movie_detail_message_writers">Writers:</string>
    <string name="movie_detail_message_stars">Stars:</string>
    <!-- endregion -->

    <!-- region Person Detail -->
    <string name="person_detail_message_born_date">Born: %s</string>
    <string name="person_detail_message_born_place">Born: in %s</string>
    <string name="person_detail_message_born_date_and_place">Born: %1s in %2s</string>
    <string name="person_detail_message_see_full_bio">See full bio >></string>
    <string name="person_detail_message_see_less">See less >></string>
    <!-- endregion -->

    <!-- region Search -->
    <string name="search_message_search">Search</string>
    <string name="search_message_movies_or_series">Movies or Series</string>
    <string name="search_message_movie">Movie</string>
    <string name="search_message_tv_series">TV Series</string>
    <string name="search_message_actor">Actor</string>
    <string name="search_message_director">Director</string>
    <string name="search_message_writer">Writer</string>
    <string name="search_message_crew">Crew</string>
    <string name="search_message_empty_search_result">Your search didn’t have any results</string>
    <!-- endregion -->

    <!-- region Profile -->
    <string name="profile_message_profile">Profile</string>
    <string name="profile_message_hello">Hello,</string>
    <string name="profile_message_login">Login</string>
    <!-- endregion -->

    <!-- region Introduction -->
    <string name="introduction_title_first">If you looking for latest movies</string>
    <string name="introduction_title_second">Welcome to best movies</string>
    <string name="introduction_title_third">Only with us only for you</string>
    <string name="introduction_skip">Skip</string>
    <string name="introduction_get_started">Get Started</string>
    <!-- endregion -->

    <!-- region Login -->
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_message_forgot_password">Forgot Password?</string>
    <string name="login_message_login">Login</string>
    <string name="login_message_register">Don\'t have an account? Register now</string>
    <!-- endregion -->

</resources>
