<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".scene.moviedetail.MovieDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.adesso.movee.scene.moviedetail.MovieDetailViewModel" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/scene_show_detail">

        <include
            layout="@layout/layout_show_detail"
            binding:showDetail="@{viewModel.movieDetails}" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollable_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_overview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_overview"
                    style="@style/TextField.ShowDetail.Overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movieDetails.overview}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_director_title"
                    style="@style/TextField.ShowDetail.PersonTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_message_director"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_director"
                    style="@style/TextField.ShowDetail.Person"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movieCredits.directors}"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_view_director_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier_crew_title"
                    tools:text="Todd Phillips" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_writer_title"
                    style="@style/TextField.ShowDetail.PersonTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/movie_detail_message_writers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_director_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_writer"
                    style="@style/TextField.ShowDetail.Person"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movieCredits.writers}"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_view_writer_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier_crew_title"
                    tools:text="Todd Phillips, Scott Silver" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_star_title"
                    style="@style/TextField.ShowDetail.PersonTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/movie_detail_message_stars"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_writer_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_star"
                    style="@style/TextField.ShowDetail.Person"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movieCredits.stars}"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_view_star_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier_crew_title"
                    tools:text="Joaquin Phoenix" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_crew_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="text_view_director_title,text_view_writer_title,text_view_star_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
